- Fix close icon positioning on mobile devices for featherlight gallery - Make gallery transition between images slightly faster

--- a/_src/_css/main.css
+++ b/_src/_css/main.css
@@ -202,3 +202,10 @@ a.hide, a.btn.hide {
     display: block;
   }
 }
+/* fix close icon positioning for featherlight gallery on mobile devices */
+@media only screen and (max-width: 1024px) {
+  .featherlight .featherlight-close-icon {
+    top: 10px;
+    right: 10px;
+  }
+}
